--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "category-encoders>=2.8.1",
     "fastapi>=0.117.1",
+    "feature-engine>=1.9.3",
     "jinja2>=3.1.6",
     "joblib>=1.5.2",
     "kaggle>=1.7.4.5",
